Make stacks-project aware of new chapter
Decided to put both sets of lecture notes in a single chapter. We can
split it out again later, but for editing now it seems easier and
quicker to do it this way.

--- a/my.bib
+++ b/my.bib
@@ -159,6 +159,15 @@
      PAGES = {xv+341},
 }
 
+@ARTICLE{andreotti,
+	AUTHOR = {Andreotti, Aldo and Frankel, Theodore},
+	TITLE = {The Lefschetz theorem on hyperplane sections},
+	JOURNAL = {Annals of Mathematics},
+	NUMBER = {69},
+	YEAR = {1959},
+	PAGES = {713--717},
+}
+
 @ARTICLE{AokiHomStacks,
     AUTHOR = {Aoki, Masao},
      TITLE = {Hom stacks},
@@ -210,6 +219,14 @@
       YEAR = {1944},
       NUMBER = {1},
      PAGES = {x+123},
+}
+
+
+@BOOK{at,
+	AUTHOR = {Artin, Emil and Tate, John},
+	TITLE = {Class field theory},
+	PUBLISHER = {AMS Chelsea Publishing},
+	YEAR = {2009},
 }
 
 @ARTICLE{Etale-coverings,
@@ -799,6 +816,24 @@
        URL = {http://dx.doi.org/10.1007/978-1-4612-0941-6},
 }
 
+@ARTICLE{boreltits,
+	AUTHOR = {Borel, Armand and Tits, Jacques},
+	TITLE = {Groupes r\'eductifs},
+	JOURNAL = {Publ. Math. IHES}
+	VOLUME = {27},
+	YEAR = {1965},
+	PAGES = {55--151},
+}
+
+@ARTICLE{bt2,
+	AUTHOR = {Borel, Armand and Tits, Jacques},
+	TITLE = {Compl\`ements \`a l'article ``Groupes r\'eductifs''},
+	JOURNAL = {Publ. Math. IHES},
+	VOLUME = {41},
+	YEAR = {1972},
+	PAGES = {253--276},
+}
+
 @ARTICLE{bcs,
     AUTHOR = {Borisov, Lev A. and Chen, Linda and Smith, Gregory George},
      TITLE = {The orbifold {C}how ring of toric {D}eligne-{M}umford stacks},
@@ -827,6 +862,38 @@
      PAGES = {xv+357},
 }
 
+@BOOK{bourbaki1,
+	AUTHOR = {Bourbaki, Nicolas}
+	TITLE = {Lie groups and Lie algebras, Ch.:I--III},
+	PUBLISHER = {Springer--Verlag},
+	ADDRESS = {New York},
+	YEAR = {2007},
+}
+
+@BOOK{bourbaki,
+	AUTHOR = {Bourbaki, Nicolas},
+	TITLE = {Lie groups and Lie algebras, Ch.:IV--VI},
+	PUBLISHER = {Springer-Verlag},
+	ADDRESS = {New York},
+	YEAR = {2002},
+}
+
+@BOOK{bourbaki789,
+	AUTHOR = {Bourbaki, Nicolas},
+	TITLE = {Lie groups and Lie algebras, Ch.:VII--IX},
+	PUBLISHER = {Springer-Verlag},
+	ADDRESS = {New York},
+	YEAR = {2005},
+}
+
+@BOOK{balg,
+	AUTHOR = {Bourbaki, Nicolas},
+	TITLE = {Algebra, Ch. 9},
+	PUBLISHER = {Hermann},
+	ADDRESS = {Paris},
+	YEAR = {1959},
+}
+
 @BOOK{Ner,
       AUTHOR      = {Bosch, Siegfried and L{\"u}tkebohmert, Werner and Raynaud, Michel},
       TITLE       = {N\'eron Models},
@@ -843,6 +910,15 @@
     VOLUME = {4},
       YEAR = {1967/1968},
      PAGES = {336--358},
+}
+
+@ARTICLE{bruhattits,
+	AUTHOR = {Bruhat, Francois and Tits, Jacques},
+	TITLE = {Groupes r\'eductifs sur un corps local I},
+	JOURNAL = {Publ. Math. IHES},
+	VOLUME = {41},
+	YEAR = {1972},
+	PAGES = {5--251},
 }
 
 @ARTICLE{WhatExact,
@@ -917,6 +993,20 @@
      PAGES = {13--45},
 }
 
+
+@ARTICLE{map,
+    AUTHOR = {Chang, Chieh-Yu and Papanikolas, Matthew A.},
+     TITLE = {Algebraic independence of periods and logarithms of {D}rinfeld modules},
+      NOTE = {With an appendix by Brian Conrad},
+   JOURNAL = {J. Amer. Math. Soc.},
+    VOLUME = {25},
+      YEAR = {2012},
+    NUMBER = {1},
+     PAGES = {123--150},
+      ISSN = {0894-0347},
+       URL = {https://doi.org/10.1090/S0894-0347-2011-00714-5},
+}
+
 @ARTICLE{Chase,
     AUTHOR = {Chase, Stephen U.},
      TITLE = {Direct products of modules},
@@ -942,6 +1032,16 @@
 % No, it is 1935 and the M. stands for Monsieur not for Michael! So it is Emil Artin.
 % In 1935 Chevalley could not know this would lead to confusion as Michael was only
 % 1 year old...
+
+@BOOK{chevquad,
+    AUTHOR = {Chevalley, Claude},
+     TITLE = {The algebraic theory of spinors and {C}lifford algebras},
+      NOTE = {Collected works. Vol. 2},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {1997},
+     PAGES = {xiv+214},
+      ISBN = {3-540-57063-2},
+}
 
 @ARTICLE{ChevalleyI,
       AUTHOR      = {Chevalley, Claude},
@@ -1085,6 +1185,44 @@
      PAGES = {747--814},
 }
 
+@INCOLLECTION{luminy,
+	AUTHOR = {Conrad, Brian},
+	TITLE = {Reductive Group Schemes},
+	BOOKTITLE = {Autour des Sch\'emas en Groupes, Vol. I}, 
+	SERIES = {Panoramas et Synth\`eses}
+	VOLUME = {Numero 42--43},
+	PUBLISHER = {Soci\'et\'e Math. de France},
+	YEAR = {2014},
+}
+
+@INCOLLECTION{zgroup,
+	AUTHOR = {Conrad, Brian},
+	TITLE = {Non-split reductive groups over $\Z$},
+	BOOKTITLE = {Autour des Sch\'emas en Groupes, Vol. II}, 
+	SERIES = {Panoramas et Synth\`eses}
+	VOLUME = {Numero 46},
+	PUBLISHER = {Soci\'et\'e Math. de France},
+	YEAR = {2015},
+	URL = {http://smf4.emath.fr/Publications/PanoramasSyntheses/2016/46/html/},
+}
+
+@INCOLLECTION{strsolv,
+	AUTHOR = {Conrad, Brian},
+	TITLE = {Structure of solvable groups},
+	SERIES = {Panoramas et Synth\`eses}
+	VOLUME = {Numero 46},
+	PUBLISHER = {Soci\'et\'e Math. de France},
+	YEAR = {2015},
+	URL = {http://smf4.emath.fr/Publications/PanoramasSyntheses/2016/46/html/},
+}
+
+@BOOK{pred,
+	AUTHOR = {Conrad, Brian and Gabber, Ofer and Prasad, Gopal},
+	TITLE = {Pseudo-reductive groups (2nd ed.)},
+	PUBLISHER = {Cambridge Univ. Press},
+	YEAR = {2015},
+}
+
 @ARTICLE{Coombes,
       AUTHOR      = {Coombes, Kevin Robert},
       TITLE       = {Every rational surface is separably split},
@@ -1205,6 +1343,25 @@
       PUBLISHER = {Springer-Verlag},
       YEAR = {1973},
       PAGES = {x+438},
+}
+
+@INCOLLECTION{dr,
+    AUTHOR = {Deligne, Pierre and Rapoport, Michael},
+     TITLE = {Les sch\'emas de modules de courbes elliptiques},
+ BOOKTITLE = {Modular functions of one variable, {II} ({P}roc. {I}nternat. {S}ummer {S}chool, {U}niv. {A}ntwerp, {A}ntwerp, 1972)},
+     PAGES = {143--316},
+     SERIES = {Lecture Notes in Math.},
+     VOLUME = {349},
+ PUBLISHER = {Springer, Berlin},
+      YEAR = {1973},
+}
+
+@BOOK{dg,
+	AUTHOR = {Demazure, Michel and Gabriel, Pierre},
+	TITLE = {Groupes alg\'ebriques},
+	PUBLISHER = {Masson},
+	ADDRESS = {Paris},
+	YEAR = {1970},
 }
 
 @ARTICLE{DeMarco,
@@ -1453,6 +1610,17 @@
      PAGES = {197--218},
  PUBLISHER = {Birkh{\"a}user Boston, Boston, MA},
       YEAR = {1990},
+}
+
+@BOOK{ekm,
+    AUTHOR = {Elman, Richard and Karpenko, Nikita and Merkurjev, Alexander},
+     TITLE = {The algebraic and geometric theory of quadratic forms},
+    SERIES = {American Mathematical Society Colloquium Publications},
+    VOLUME = {56},
+ PUBLISHER = {American Mathematical Society, Providence, RI},
+      YEAR = {2008},
+     PAGES = {viii+435},
+       URL = {https://doi.org/10.1090/coll/056},
 }
 
 @ARTICLE{Emerton-Gee,
@@ -2710,6 +2878,16 @@
      PAGES = {703--708},
 }
 
+@BOOK{humphreys,
+    AUTHOR = {Humphreys, James E.},
+     TITLE = {Linear algebraic groups (2nd ed.)},
+      NOTE = {Graduate Texts in Mathematics, No. 21},
+ PUBLISHER = {Springer-Verlag},
+ ADDRESS = {New York},
+      YEAR = {1987},
+     PAGES = {xiv+247},
+}
+
 @ARTICLE{Huneke-Sharp,
     AUTHOR = {Huneke, Craig L. and Sharp, Rodney Y.},
      TITLE = {Bass numbers of local cohomology modules},
@@ -3648,6 +3826,18 @@
      PAGES = {819--827},
 }
 
+@ARTICLE{tori,
+    AUTHOR = {Langlands, R. P.},
+     TITLE = {Representations of abelian algebraic groups},
+      NOTE = {Olga Taussky-Todd: in memoriam},
+   JOURNAL = {Pacific J. Math.},
+      YEAR = {1997},
+    NUMBER = {Special Issue},
+     PAGES = {231--250},
+      ISSN = {0030-8730},
+       URL = {https://doi.org/10.2140/pjm.1997.181.231},
+}
+
 @ARTICLE{Lazard,
     AUTHOR = {Lazard, Daniel},
      TITLE = {Disconnexit\'es des spectres d'anneaux et des pr\'esch\'emas},
@@ -4120,6 +4310,15 @@
      PAGES = {xiii+323},
 }
 
+@BOOK{milnor,
+    AUTHOR = {Milnor, John},
+     TITLE = {Singular points of complex hypersurfaces},
+    SERIES = {Annals of Mathematics Studies, No. 61},
+ PUBLISHER = {Princeton University Press, Princeton, N.J.; University of Tokyo Press, Tokyo},
+      YEAR = {1968},
+     PAGES = {iii+122},
+}
+
 @ARTICLE{Miyaoka-Mori86,
       AUTHOR      = {Miyaoka, Yoichi and Mori, Shigefumi},
       TITLE       = {A numerical criterion for uniruledness},
@@ -4491,6 +4690,18 @@
 }
 
 %%%%%%%%%%%%%%%%%%%%%% O %%%%%%%%%%%%%%%%%%%%%%
+
+@ARTICLE{oesterle,
+    AUTHOR = {Oesterl\'e, Joseph},
+     TITLE = {Nombres de {T}amagawa et groupes unipotents en caract\'eristique {$p$}},
+   JOURNAL = {Invent. Math.},
+    VOLUME = {78},
+      YEAR = {1984},
+    NUMBER = {1},
+     PAGES = {13--88},
+      ISSN = {0020-9910},
+       URL = {https://doi.org/10.1007/BF01388714},
+}
 
 @ARTICLE{Ogoma,
     AUTHOR = {Ogoma, Tetsushi},
@@ -5078,6 +5289,17 @@
   YEAR = {2003}
 }
 
+@ARTICLE{rosenlicht,
+    AUTHOR = {Rosenlicht, Maxwell},
+     TITLE = {Questions of rationality for solvable algebraic groups over nonperfect fields},
+   JOURNAL = {Ann. Mat. Pura Appl. (4)},
+    VOLUME = {61},
+      YEAR = {1963},
+     PAGES = {97--120},
+      ISSN = {0003-4622},
+       URL = {https://doi.org/10.1007/BF02412850},
+}
+
 @UNPUBLISHED{Joe,
 	AUTHOR	= {Ross, Joseph},
 	TITLE	= {The Hilbert-Chow Morphism and the Incidence Divisor},
@@ -5248,6 +5470,15 @@
      PAGES = {24},
 }
 
+@BOOK{selbach,
+    AUTHOR = {Selbach, Martin},
+     TITLE = {Klassifikationstheorie halbeinfacher algebraischer {G}ruppen},
+      NOTE = {Diplomarbeit, Univ. Bonn, Bonn, 1973, Bonner Mathematische Schriften, Nr. 83},
+ PUBLISHER = {Mathematisches Institut der Universit\"at Bonn, Bonn},
+      YEAR = {1976},
+     PAGES = {v+140},
+}
+
 @BOOK{Sernesi,
       AUTHOR      = {Sernesi, Edoardo},
       TITLE       = {Topics on families of projective varieties},
@@ -5344,6 +5575,31 @@
      PAGES = {188},
 }
 
+@BOOK{serrealggp,
+    AUTHOR = {Serre, Jean-Pierre},
+     TITLE = {Algebraic groups and class fields},
+    SERIES = {Graduate Texts in Mathematics},
+    VOLUME = {117},
+      NOTE = {Translated from the French},
+ PUBLISHER = {Springer-Verlag, New York},
+      YEAR = {1988},
+     PAGES = {x+207},
+       URL = {https://doi.org/10.1007/978-1-4612-1035-1},
+}
+
+@BOOK{serrelie,
+    AUTHOR = {Serre, Jean-Pierre},
+     TITLE = {Lie algebras and {L}ie groups},
+    SERIES = {Lecture Notes in Mathematics},
+    VOLUME = {1500},
+      NOTE = {1964 lectures given at Harvard University, Corrected fifth printing of the second (1992) edition},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {2006},
+     PAGES = {viii+168},
+      ISBN = {978-3-540-55008-2; 3-540-55008-9},
+}
+
+
 @ARTICLE{seshadri_quotients,
     AUTHOR = {Seshadri, Conjeevaram Srirangachari},
      TITLE = {Quotient spaces modulo reductive algebraic groups},
@@ -5406,6 +5662,17 @@
        URL = {http://dx.doi.org/10.1007/s00222-012-0416-1},
 }
 
+@ARTICLE{Spaltenstein,
+    AUTHOR = {Spaltenstein, Nicolas},
+     TITLE = {Resolutions of unbounded complexes},
+   JOURNAL = {Compositio Math.},
+    VOLUME = {65},
+      YEAR = {1988},
+    NUMBER = {2},
+     PAGES = {121--154},
+       URL = {http://www.numdam.org/item?id=CM_1988__65_2_121_0},
+}
+
 @ARTICLE{Spivakovsky,
     AUTHOR = {Spivakovsky, Mark},
      TITLE = {A new proof of {D}. {P}opescu's theorem on smoothing of ring homomorphisms},
@@ -5416,6 +5683,28 @@
     NUMBER = {2},
      PAGES = {381--444},
        URL = {http://dx.doi.org/10.1090/S0894-0347-99-00294-5},
+}
+
+@BOOK{springer,
+    AUTHOR = {Springer, Tonny A.},
+     TITLE = {Linear algebraic groups},
+    SERIES = {Modern Birkh\"auser Classics},
+   EDITION = {second},
+ PUBLISHER = {Birkh\"auser Boston, Inc., Boston, MA},
+      YEAR = {2009},
+     PAGES = {xvi+334},
+      ISBN = {978-0-8176-4839-8},
+}
+
+@BOOK{octjordan,
+    AUTHOR = {Springer, Tonny A. and Veldkamp, Ferdinand D.},
+     TITLE = {Octonions, {J}ordan algebras and exceptional groups},
+    SERIES = {Springer Monographs in Mathematics},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {2000},
+     PAGES = {viii+208},
+      ISBN = {3-540-66337-1},
+       URL = {https://doi.org/10.1007/978-3-662-12622-6},
 }
 
 @MISC{stacks-project,
@@ -5464,15 +5753,36 @@
   YEAR = {2006},
 }
 
-@ARTICLE{Spaltenstein,
-    AUTHOR = {Spaltenstein, Nicolas},
-     TITLE = {Resolutions of unbounded complexes},
-   JOURNAL = {Compositio Math.},
-    VOLUME = {65},
-      YEAR = {1988},
-    NUMBER = {2},
-     PAGES = {121--154},
-       URL = {http://www.numdam.org/item?id=CM_1988__65_2_121_0},
+@ARTICLE{steinbergreg,
+    AUTHOR = {Steinberg, Robert},
+     TITLE = {Regular elements of semisimple algebraic groups},
+   JOURNAL = {Inst. Hautes \'Etudes Sci. Publ. Math.},
+    NUMBER = {25},
+      YEAR = {1965},
+     PAGES = {49--80},
+      ISSN = {0073-8301},
+       URL = {http://www.numdam.org/item?id=PMIHES_1965__25__49_0},
+}
+
+@BOOK{steinbergend,
+    AUTHOR = {Steinberg, Robert},
+     TITLE = {Endomorphisms of linear algebraic groups},
+    SERIES = {Memoirs of the American Mathematical Society, No. 80},
+ PUBLISHER = {American Mathematical Society, Providence, R.I.},
+      YEAR = {1968},
+     PAGES = {108},
+}
+
+@ARTICLE{steinberg,
+    AUTHOR = {Steinberg, Robert},
+     TITLE = {The isomorphism and isogeny theorems for reductive algebraic groups},
+   JOURNAL = {J. Algebra},
+    VOLUME = {216},
+      YEAR = {1999},
+    NUMBER = {1},
+     PAGES = {366--383},
+      ISSN = {0021-8693},
+       URL = {https://doi.org/10.1006/jabr.1998.7776},
 }
 
 @ARTICLE{Stevens88,
@@ -5586,6 +5896,15 @@
  PUBLISHER = {Birkh\"auser Boston},
    ADDRESS = {Boston, MA},
       YEAR = {1990},
+}
+
+@INCOLLECTION{tits66,
+    AUTHOR = {Tits, J.},
+     TITLE = {Classification of algebraic semisimple groups},
+ BOOKTITLE = {Algebraic {G}roups and {D}iscontinuous {S}ubgroups ({P}roc. {S}ympos. {P}ure {M}ath., {B}oulder, {C}olo., 1965)},
+     PAGES = {33--62},
+ PUBLISHER = {Amer. Math. Soc., Providence, R.I., 1966},
+      YEAR = {1966},
 }
 
 @ARTICLE{Toen,
