--- a/preamble.tex
+++ b/preamble.tex
@@ -102,6 +102,7 @@
 \externaldocument[models-]{models}
 \externaldocument[pione-]{pione}
 \externaldocument[etale-cohomology-]{etale-cohomology}
+\externaldocument[ssgroups-]{ssgroups}
 \externaldocument[proetale-]{proetale}
 \externaldocument[crystalline-]{crystalline}
 \externaldocument[spaces-]{spaces}
