New macros \SL and \GL
Used a lot in Linear Algebraic Groups

--- a/criteria.tex
+++ b/criteria.tex
@@ -2205,9 +2205,9 @@ of a category using the notion of isomorphisms just defined.
 The above suggests we consider the functor $G$ in groups
 which associates to any scheme $T$ the group
 $$
-G(T) = \{g \in \text{GL}_d(\Gamma(T, \mathcal{O}_T)) \mid g(e_1) = e_1\}
+G(T) = \{g \in \GL_d(\Gamma(T, \mathcal{O}_T)) \mid g(e_1) = e_1\}
 $$
-It is clear that $G \subset \text{GL}_d$ (see
+It is clear that $G \subset \GL_d$ (see
 Groupoids, Example \ref{groupoids-example-general-linear-group})
 is the closed subgroup scheme cut out by the equations
 $x_{11} = 1$ and $x_{i1} = 0$ for $i > 1$. Hence $G$ is a smooth
