--- a/curves.tex
+++ b/curves.tex
@@ -3440,7 +3440,7 @@ is the image of the displayed arrow. Since the permutation
 group of a set of cardinality $n^{2g}$ has cardinality $(n^{2g})!$
 we conclude by Galois theory that $[k' : k] \leq (n^{2g})!$.
 (Of course this proves the lemma with the bound
-$|\text{GL}_{2g}(\mathbf{Z}/n\mathbf{Z})|$, but all we want
+$|\GL_{2g}(\mathbf{Z}/n\mathbf{Z})|$, but all we want
 here is that there is some bound.)
 
 \medskip\noindent
