--- a/examples.tex
+++ b/examples.tex
@@ -3519,13 +3519,13 @@ A product of sheaves is a sheaf, so $F$ also satisfies the sheaf property for
 the fpqc topology. The diagonal of $F$ is representable: if $f : T \to F$
 and $g : S \to F$ are morphisms, then $T \times_F S$ is the scheme theoretic
 intersection of the closed subschemes $T \times_{f_i, \mathbf{P}^1, g_i} S$
-inside the scheme $T \times S$. Consider the group scheme $\text{SL}_2$ which
-comes with a surjective smooth affine morphism $\text{SL}_2 \to \mathbf{P}^1$.
-Next, consider $U = (\text{SL}_2)^\infty$ with its canonical (product) morphism
+inside the scheme $T \times S$. Consider the group scheme $\SL_2$ which
+comes with a surjective smooth affine morphism $\SL_2 \to \mathbf{P}^1$.
+Next, consider $U = (\SL_2)^\infty$ with its canonical (product) morphism
 $U \to F$. Note that $U$ is an affine scheme. We claim the morphism
 $U \to F$ is flat, surjective, and universally open. Namely, suppose
 $f : T \to F$ is a morphism. Then $Z = T \times_F U$ is the infinite
-fibre product of the schemes $Z_i = T \times_{f_i, \mathbf{P}^1} \text{SL}_2$
+fibre product of the schemes $Z_i = T \times_{f_i, \mathbf{P}^1} \SL_2$
 over $T$. Each of the morphisms $Z_i \to T$ is surjective smooth and
 affine which implies that
 $$
