--- a/groupoids-quotients.tex
+++ b/groupoids-quotients.tex
@@ -1381,7 +1381,7 @@ X = \Spec(A^G)
 $$
 so that at least the condition of the definition above is satisfied.
 Even though this is a nice thing you can do it is often not the right
-quotient; for example if $U = \text{GL}_{n, k}$ and $G$ is the group of
+quotient; for example if $U = \GL_{n, k}$ and $G$ is the group of
 upper triangular matrices, then the above gives $X = \Spec(k)$, whereas
 a much better quotient (namely the flag variety) exists.
 
