--- a/guide.tex
+++ b/guide.tex
@@ -443,7 +443,7 @@ a virtual fundamental class for a Deligne-Mumford stack.
 Quotient stacks\footnote{In the literature,
 \emph{quotient stack} often means a stack of the
 form $[X/G]$ with $X$ an algebraic space and $G$ a subgroup scheme
-of $\text{GL}_n$ rather than an arbitrary flat group scheme.}
+of $\GL_n$ rather than an arbitrary flat group scheme.}
 form a very important subclass of Artin stacks which include almost all moduli
 stacks studied by algebraic geometers. The geometry of a quotient stack
 $[X/G]$ is the $G$-equivariant geometry of $X$. It is often easier to show
@@ -501,7 +501,7 @@ a vector bundle. The first main theorem is that if $\mathcal{X}$ is a normal
 noetherian algebraic stack with affine stabilizer groups at closed points, then
 the following are equivalent: (1) $\mathcal{X}$ has the resolution property and
 (2)
-$\mathcal{X} = [Y/\text{GL}_n]$ with $Y$ quasi-affine. In the case
+$\mathcal{X} = [Y/\GL_n]$ with $Y$ quasi-affine. In the case
 $\mathcal{X}$ is finite type over
 a field, then (1) and (2) are equivalent to: (3)
 $\mathcal{X} = [\Spec(A)/G]$ with $G$
