--- a/intersection.tex
+++ b/intersection.tex
@@ -2378,7 +2378,7 @@ doubly transitive.
 \end{lemma}
 
 \begin{proof}
-Omitted. Hint: This follows from the fact that $\text{GL}(V)$ acts doubly
+Omitted. Hint: This follows from the fact that $\GL(V)$ acts doubly
 transitive on pairs of linearly independent vectors.
 \end{proof}
 
