--- a/preamble.tex
+++ b/preamble.tex
@@ -201,6 +201,12 @@
 \def\Coim{\mathop{\mathrm{Coim}}}
 
 %
+% Macros for linear algebraic groups
+%
+\def\SL{\mathop{\mathrm{SL}}\nolimits}
+\def\GL{\mathop{\mathrm{GL}}\nolimits}
+
+%
 % Macros for moduli stacks/spaces
 %
 \def\QCohstack{\mathcal{QC}\!\mathit{oh}}
