--- a/spaces-groupoids.tex
+++ b/spaces-groupoids.tex
@@ -461,13 +461,13 @@ Let $n \geq 1$.
 Consider the functor which associates
 to any scheme $T$ over $B$ the group
 $$
-\text{GL}_n(\Gamma(T, \mathcal{O}_T))
+\GL_n(\Gamma(T, \mathcal{O}_T))
 $$
 of invertible $n \times n$ matrices over
 the global sections of the structure sheaf.
 This is representable by the group algebraic space
 $$
-\text{GL}_{n, B} = B \times_S \text{GL}_{n, S}
+\GL_{n, B} = B \times_S \text{GL}_{n, S}
 $$
 over $B$. Here $\mathbf{G}_{m, S}$ is the general linear group scheme
 over $S$, see
@@ -480,7 +480,7 @@ Let $B \to S$ as in Section \ref{section-notation}.
 Let $n \geq 1$.
 The determinant defines a morphism of group algebraic spaces
 $$
-\det : \text{GL}_{n, B} \longrightarrow \mathbf{G}_{m, B}
+\det : \GL_{n, B} \longrightarrow \mathbf{G}_{m, B}
 $$
 over $B$. It is the base change of the determinant morphism
 over $S$ from
