--- a/spaces-more-groupoids.tex
+++ b/spaces-more-groupoids.tex
@@ -1227,7 +1227,7 @@ We may assume $k$ is algebraically closed (details omitted); we only
 do this so we may argue using rational points, but the reader can work
 around this if she/he so desires. In the proof products are over $k$.
 The automorphism group algebraic space of $(\mathbf{P}^1_k)^n$ contains
-$G = (\text{GL}_{2, k})^n$. If $C \subset (\mathbf{P}^1_k)^n$ is a
+$G = (\GL_{2, k})^n$. If $C \subset (\mathbf{P}^1_k)^n$ is a
 closed subvariety (in particular irreducible over $k$) which is mapped
 to a point, then we can apply
 More on Morphisms of Spaces,
