--- a/stacks-introduction.tex
+++ b/stacks-introduction.tex
@@ -409,7 +409,7 @@ s, r, t\text{ arbitrary}
 \end{matrix}
 \right\}
 \subset
-\text{GL}_{3, \mathbf{Z}}
+\GL_{3, \mathbf{Z}}
 $$
 There is an action $H \times W \to W$ of $H$ on the Weierstrass scheme $W$.
 To find the equations for this action write out what a coordinate change
