--- a/fields.tex
+++ b/fields.tex
@@ -2362,8 +2362,8 @@ In this case a direct computation shows both sides are equal.
 \medskip\noindent
 In the case of norms both sides are zero if $\varphi$ has a nonzero kernel.
 Hence we may assume $\varphi$ corresponds to an element of
-$\text{GL}_n(L)$. Both sides of the formula are multiplicative in $\varphi$.
-Since every element of $\text{GL}_n(L)$ is a product of elementary
+$\GL_n(L)$. Both sides of the formula are multiplicative in $\varphi$.
+Since every element of $\GL_n(L)$ is a product of elementary
 matrices we may assume that $\varphi$ either looks like
 $$
 E_{12}(\lambda) =
